Добавлены индексы в БД. Улучшена функциональность API. Улучшена документация Swagger. Добавлен метод для получения подробной информации о песне. Добавлена фильтрация по полям. Обновлен метод для частичного изменения данных о песне.
