# docs/swagger.yaml
@@ -1,4 +1,15 @@
 definitions:
+  models.Artist:
+    properties:
+      createdAt:
+        type: string
+      group:
+        type: string
+      id:
+        type: integer
+      updatedAt:
+        type: string
+    type: object
   models.ErrorResponse:
     properties:
       error:
@@ -11,9 +22,11 @@ definitions:
     type: object
   models.Song:
     properties:
+      artist:
+        $ref: '#/definitions/models.Artist'
+      artistId:
+        type: integer
       createdAt:
-        type: string
-      group:
         type: string
       id:
         type: integer
@@ -28,6 +41,19 @@ definitions:
       updatedAt:
         type: string
     type: object
+  models.SongUpdate:
+    properties:
+      group:
+        type: string
+      link:
+        type: string
+      releaseDate:
+        type: string
+      song:
+        type: string
+      text:
+        type: string
+    type: object
 info:
   contact: {}
 paths:
@@ -35,16 +61,28 @@ paths:
     get:
       consumes:
       - application/json
-      description: Получает список песен с фильтрацией по полям (например, group и
-        song) и поддержкой пагинации
+      description: Возвращает список песен. Можно фильтровать по названию песни, группе,
+        дате релиза и другим полям.
       parameters:
-      - description: Группа
+      - description: Название группы для фильтрации (регистр не важен)
         in: query
         name: group
         type: string
-      - description: Название песни
+      - description: Название песни для фильтрации (регистр не важен)
         in: query
         name: song
+        type: string
+      - description: Дата релиза (в формате YYYY-MM-DD) для фильтрации
+        in: query
+        name: releaseDate
+        type: string
+      - description: Фрагмент текста песни для поиска
+        in: query
+        name: text
+        type: string
+      - description: Фрагмент URL ссылки для поиска
+        in: query
+        name: link
         type: string
       - description: Номер страницы (по умолчанию 1)
         in: query
@@ -67,7 +105,7 @@ paths:
           description: Internal Server Error
           schema:
             $ref: '#/definitions/models.ErrorResponse'
-      summary: Получение песен с фильтрацией и пагинацией
+      summary: Получение списка песен с фильтрацией
       tags:
       - songs
     post:
@@ -120,7 +158,7 @@ paths:
       summary: Удаление песни
       tags:
       - songs
-    put:
+    get:
       consumes:
       - application/json
       parameters:
@@ -129,12 +167,35 @@ paths:
         name: id
         required: true
         type: integer
-      - description: Данные песни
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/models.Song'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/models.ErrorResponse'
+      summary: Получение информации о песне
+      tags:
+      - songs
+    patch:
+      consumes:
+      - application/json
+      parameters:
+      - description: ID песни
+        in: path
+        name: id
+        required: true
+        type: integer
+      - description: Данные для обновления песни
         in: body
         name: song
         required: true
         schema:
-          $ref: '#/definitions/models.Song'
+          $ref: '#/definitions/models.SongUpdate'
       produces:
       - application/json
       responses:
@@ -146,7 +207,7 @@ paths:
           description: Bad Request
           schema:
             $ref: '#/definitions/models.ErrorResponse'
-      summary: Изменение данных песни
+      summary: Частичное обновление данных песни
       tags:
       - songs
   /songs/{id}/text:
