# internal/models/models.go
@@ -6,7 +6,7 @@ import (
 
 type Song struct {
 	ID          uint      `gorm:"primaryKey" json:"id"`
-	ArtistID    uint      `json:"artistId"`
+	ArtistID    uint      `gorm:"index" json:"artistId"`
 	Artist      Artist    `gorm:"foreignKey:ArtistID" json:"artist"`
 	Song        string    `gorm:"not null" json:"song"`
 	ReleaseDate time.Time `json:"releaseDate"`
@@ -18,15 +18,23 @@ type Song struct {
 
 type Artist struct {
 	ID        uint      `gorm:"primaryKey" json:"id"`
-	Name      string    `gorm:"unique;not null" json:"group"`
+	Name      string    `gorm:"uniqueIndex;not null" json:"group"`
 	CreatedAt time.Time `json:"createdAt"`
 	UpdatedAt time.Time `json:"updatedAt"`
 }
 
+type SongUpdate struct {
+	GroupName   *string    `json:"group,omitempty"`
+	Song        *string    `json:"song,omitempty"`
+	ReleaseDate *time.Time `json:"releaseDate,omitempty"`
+	Text        *string    `json:"text,omitempty"`
+	Link        *string    `json:"link,omitempty"`
+}
+
 type SongDetail struct {
-	ReleaseDate string `json:"releaseDate"`
-	Text        string `json:"text"`
-	Link        string `json:"link"`
+	ReleaseDate time.Time `json:"releaseDate"`
+	Text        string    `json:"text"`
+	Link        string    `json:"link"`
 }
 
 type ErrorResponse struct {
